--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
 VITE_API_URL=http://localhost:8081
+VITE_WS_URL=ws://localhost:8081
+VITE_CHUNK_SIZE=1048576
+VITE_MAX_RETRIES=3
+VITE_VERIFY_INTERVAL=10
