--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,13 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=root
 DB_NAME=postgres
+# Upload Configuration
+UPLOAD_DIR=./uploads
+CHUNK_SIZE=1048576
+MAX_RETRIES=3
+VERIFY_INTERVAL=10
+
 # Server Configuration
 SERVER_PORT=8081
-UPLOAD_DIR=./uploads
+MAX_BODY_SIZE=10485760
+ALLOWED_ORIGINS=*
