fit:Fixes and Debugging

--- a/backend/.env
+++ b/backend/.env
@@ -4,13 +4,16 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=root
 DB_NAME=postgres
-# Upload Configuration
+SERVER_PORT=8081
+MAX_BODY_SIZE=104857600
+ALLOWED_ORIGINS=http://localhost:5173
+DB_SSLMODE=disable
+JWT_SECRET=4568435649569
+JWT_EXPIRY_HOURS=72
 UPLOAD_DIR=./uploads
 CHUNK_SIZE=1048576
 MAX_RETRIES=3
-VERIFY_INTERVAL=10
-
-# Server Configuration
-SERVER_PORT=8081
-MAX_BODY_SIZE=10485760
-ALLOWED_ORIGINS=*
+# Database Migration (DANGER!)
+# Set to 'true' to drop all tables and recreate schema
+# WARNING: This will DELETE ALL DATA!
+# DROP_TABLES=true
